changes for november